fixed visibility bug

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,3 +7,8 @@
 @import 'header';
 @import 'main';
 @import 'footer';
+
+
+body {
+    visibility: visible;
+}
